# GDML_Studio

./: .gitignore  BgoDetModel_v2_00.gdml  NaiDetModelWithMLI_v2_00.gdml  README.md  collect_source.py  fermi_simple_elements_satellite.gdml  run.bat  run.sh
backend/: Cargo.toml  SOLID_PROGRESS.md
backend/data/: nist_materials.json
backend/src/: config.rs  lib.rs  main.rs
backend/src/api/: errors.rs  handlers.rs  routes.rs
backend/src/eval/: context.rs  dependency.rs  engine.rs  mod.rs
backend/src/gdml/: defines.rs  materials.rs  mod.rs  model.rs  parser.rs  solids.rs  structure.rs  units.rs
backend/src/mesh/: csg.rs  mod.rs  tessellator.rs  types.rs
backend/src/mesh/primitives/: arb8_mesh.rs  box_mesh.rs  cone_mesh.rs  cut_tube_mesh.rs  elcone_mesh.rs  ellipsoid_mesh.rs  eltube_mesh.rs  hype_mesh.rs  mod.rs  paraboloid_mesh.rs  polycone_mesh.rs  polyhedra_mesh.rs  sphere_mesh.rs  torus_mesh.rs  trap_mesh.rs  trd_mesh.rs  tube_mesh.rs  twisted_box_mesh.rs  twisted_trap_mesh.rs  twisted_tubs_mesh.rs  xtru_mesh.rs
backend/src/state/: app_state.rs
backend/tests/: integration_test.rs
doc/: gdml-expressions-and-units.md  gdml-specification.md  nist-materials.md  rust-backend-reference.md  threejs-r3f-reference.md  zustand-reference.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ContextMenu.tsx  Layout.tsx  (+2 more)
sample_data/: README.md  pinhole_lab.gdml  pod_asm.gdml  solids.gdml  test_all_features.gdml  test_modular_child.gdml  test_modular_mother.gdml
(+16 files in other folders)
